# ai-id

./: Cargo.toml  Makefile  README.md
ai-id/: Cargo.toml  README.md
ai-id-js/: README.md  package-lock.json  package.json
ai-id-js/rust/: Cargo.toml
ai-id-js/rust/src/: lib.rs
ai-id/src/: error.rs  lib.rs
ai-id/tests/: integration.rs
aiid/: Cargo.toml  README.md
aiid-js/: README.md  package-lock.json  package.json
aiid-js/rust/: Cargo.toml
aiid-js/rust/src/: lib.rs
aiid/src/: b32.rs  error.rs  lib.rs  util.rs
aiid/tests/: integration.rs
test/: fixtures.json
