[package]
name = "ai-id"
authors = ["neonphog"]
version = "0.0.1"
edition = "2018"
description = "AIngle base32 encoding scheme for keys, agents, identifiers, etc"
keywords = ["base32", "encoding", "decoding", "erasure", "reed-solomon"]
categories = ["encoding"]
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/ai-id"
repository = "https://github.com/AIngleLab/ai-id"

[dependencies]
reed-solomon = "=0.2.1"

[dev-dependencies]
hex = "0.3.2"
serde_json = "1.0"
